Add link to Github

--- a/presentation.html
+++ b/presentation.html
@@ -14,7 +14,16 @@
         <section id="start">
             <h2>Spark ML Meets Real Estate</h2>
 
-            <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+            <p>
+
+                <a href="https://github.com/mlangc/scalaua-2018">
+                    <img style="width: 46px; margin: auto" src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png"> https://github.com/mlangc/scalaua-2018
+                </a>
+            </p>
+
+            <p style="font-size: 50%; margin-top: 10%;">
+                <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+            </p>
         </section>
 
         <!--
@@ -374,12 +383,19 @@
             <section id="end">
                 <h3>And above all: Have fun!</h3>
 
-                <div style="margin-top: 200px;">
+                <div>
+                </div>
+
+                <div style="margin-top: 20%;">
                     <p>
                         Matthias Langer (m.langer798@gmail.com)
                     </p>
 
-                    <div style="width: 60%; margin: auto">
+                    <a href="https://github.com/mlangc/scalaua-2018">
+                        <img style="width: 46px; margin: auto" src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png"> https://github.com/mlangc/scalaua-2018
+                    </a>
+
+                    <div style="width: 60%; margin: 1% auto;">
                         <a style="line-height: 4em;" href="https://github.com/mlangc">
                             <img alt="mlangc" class="avatar width-full rounded-2"
                                  src="https://avatars2.githubusercontent.com/u/7326646?v=3&amp;s=460" width="100"
